--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Skeleventy - A skeleton boilerplate built with Eleventy",
   "scripts": {
     "dev": "ELEVENTY_ENV=development npx @11ty/eleventy --config=eleventy.config.js --serve & webpack --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "production": "NODE_ENV=production webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js && npx @11ty/eleventy --config=eleventy.config.js"
+    "production": "NODE_ENV=production webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js && npx @11ty/eleventy --config=eleventy.config.js",
+    "debug": "DEBUG=* npx eleventy --config=lib/eleventy.config.js"
   },
   "repository": {
     "type": "git",
