--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "sass": "^1.22.12",
     "sass-loader": "^8.0.0",
     "tailwindcss": "^1.2.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "js-yaml": "^3.14.0"
   },
   "dependencies": {
-    "js-yaml": "^3.14.0"
+    "@sentry/browser": "^5.22.3",
+    "@sentry/tracing": "^5.22.3"
   }
 }
