--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "@11ty/eleventy": "^0.10.0",
     "eleventy-plugin-lazyimages": "^1.1.2",
     "html-minifier": "^4.0.0",
+    "js-yaml": "^3.14.0",
     "laravel-mix": "^5.0.1",
     "laravel-mix-purgecss": "^4.2.0",
     "resolve-url-loader": "^3.1.0",
     "sass": "^1.22.12",
     "sass-loader": "^8.0.0",
     "tailwindcss": "^1.2.0",
-    "vue-template-compiler": "^2.6.10",
-    "js-yaml": "^3.14.0"
+    "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
     "@sentry/browser": "^5.22.3",
